// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds group 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={true}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[MockFunction]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`adds group 2`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
          selected={
            Object {
              "name": "lambda",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[MockFunction]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`adds group 3`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
          selected={
            Object {
              "name": "lambda",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <button
        disabled={true}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[MockFunction]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`adds user 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={true}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[MockFunction]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`adds user 2`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
          selected={
            Object {
              "login": "luke",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[MockFunction]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`adds user 3`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
          selected={
            Object {
              "login": "luke",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <button
        disabled={true}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[MockFunction]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;
